# BearWisdom

./: .gitattributes  .gitignore  CHANGELOG.md  CONNECTOR_MIGRATION.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  PIPELINE_REFACTOR_PLAN.md  README.md  REFACTOR_PLAN.md  SECURITY.md  baseline-all.json  baseline-by-so2025.md  baseline-csharp-huge.json  baseline-csharp-new.json  baseline-csharp.json  baseline.json  benchmark.md  quality-baseline.json  resolution-baseline.json  resolution-baseline.json.bak.pre-android-20260417-114324
benchmarks/: Cargo.toml
benchmarks/src/: main.rs  report.rs  runner.rs  sampler.rs  scorer.rs  task.rs
crates/bearwisdom/: Cargo.toml  build.rs
crates/bearwisdom-bench/: Cargo.toml
crates/bearwisdom-bench/src/: main.rs
crates/bearwisdom-cli/: Cargo.toml
crates/bearwisdom-cli/src/: main.rs
crates/bearwisdom-mcp/: Cargo.toml
crates/bearwisdom-mcp/src/: compact.rs  compact_tests.rs  main.rs  register.rs  register_tests.rs  server.rs  services.rs  services_tests.rs
crates/bearwisdom-profile/: Cargo.toml
crates/bearwisdom-profile/src/: detect.rs  exclusions.rs  lib.rs  registry.rs  tests.rs  types.rs  walker.rs  walker_tests.rs
crates/bearwisdom-profile/src/languages/: ada.rs  angular_template.rs  astro.rs  bicep.rs  blade.rs  c.rs  clojure.rs  cmake.rs  cobol.rs  cpp.rs  crontab.rs  csharp.rs  css.rs  dart.rs  dockerfile.rs  eex.rs  ejs.rs  elixir.rs  erb.rs  erlang.rs  fortran.rs  freemarker.rs  fsharp.rs  gdscript.rs  gleam.rs  go_lang.rs  gotemplate.rs  graphql.rs  groovy.rs  gsp.rs  haml.rs  handlebars.rs  hare.rs  haskell.rs  hcl.rs  heex.rs  html.rs  java.rs  javascript.rs  jinja.rs  (+58 more)
crates/bearwisdom-profile/src/scanner/: dependencies.rs  entry_points.rs  environment.rs  frameworks.rs  languages.rs  mod.rs  monorepo.rs  sdks.rs
crates/bearwisdom-web/: Cargo.toml
crates/bearwisdom-web/src/: api.rs  db.rs  main.rs
crates/bearwisdom/src/: alloc_probe.rs  lib.rs  memory_cap.rs  panic_hook.rs  types.rs  types_tests.rs  walker.rs  walker_tests.rs
crates/bearwisdom/src/bridge/: enricher.rs  enricher_tests.rs  graph_bridge.rs  graph_bridge_tests.rs  mod.rs  scip.rs  scip_tests.rs
crates/bearwisdom/src/connectors/: angular_di.rs  angular_di_tests.rs  connector_db.rs  di_connector.rs  django.rs  django_tests.rs  docker_compose.rs  dockerfile.rs  dotnet_di.rs  dotnet_di_tests.rs  dotnet_events.rs  dotnet_events_tests.rs  dotnet_http_client.rs  dotnet_http_client_tests.rs  ef_core.rs  ef_core_tests.rs  electron_ipc.rs  electron_ipc_tests.rs  event_connector.rs  fastapi_routes.rs  fastapi_routes_tests.rs  from_plugins.rs  frontend_http.rs  frontend_http_tests.rs  go_routes.rs  go_routes_tests.rs  graphql.rs  graphql_connector.rs  graphql_tests.rs  grpc.rs  grpc_connector.rs  grpc_tests.rs  http_api.rs  http_api_tests.rs  ipc_connector.rs  kubernetes.rs  laravel_routes.rs  laravel_routes_tests.rs  matcher.rs  message_queue.rs  (+22 more)
crates/bearwisdom/src/db/: audit.rs  metrics.rs  mod.rs  schema.rs  schema_tests.rs
crates/bearwisdom/src/ecosystem/: CLAUDE.md  alire.rs  alire_tests.rs  android_sdk.rs  bash_completion_synthetics.rs  bash_completion_synthetics_tests.rs  bazel_central_registry.rs  bazel_central_registry_tests.rs  bicep_runtime.rs  bicep_runtime_tests.rs  blazor_runtime.rs  blazor_runtime_tests.rs  cabal.rs  cabal_tests.rs  cargo.rs  cargo_build_scripts.rs  cargo_build_scripts_tests.rs  cargo_expand_runtime.rs  cargo_expand_runtime_tests.rs  clay_ui_synthetics.rs  clay_ui_synthetics_tests.rs  clojure_core.rs  compile_commands.rs  compile_commands_tests.rs  compose_icons_stubs.rs  composer.rs  cpan.rs  cpython_stdlib.rs  cran.rs  dart_sdk.rs  dayjs_synthetics.rs  dotnet_stdlib.rs  ecmascript_imports.rs  elixir_stdlib.rs  ember_handlebars_helpers.rs  ember_handlebars_helpers_tests.rs  erlang_otp.rs  erlang_otp_tests.rs  externals.rs  externals_tests.rs  (+99 more)
crates/bearwisdom/src/indexer/: changeset.rs  changeset_tests.rs  demand.rs  expand.rs  expand_tests.rs  externals.rs  flow.rs  flow_config_tests.rs  flow_tests.rs  framework_globals.rs  full.rs  full_tests.rs  incremental.rs  incremental_tests.rs  keywords.rs  mem_probe.rs  mod.rs  plugin_state.rs  plugin_state_tests.rs  post_index.rs  post_index_tests.rs  primitives.rs  project_context.rs  project_context_tests.rs  query_builtins.rs  ref_cache.rs  resolve.rs  resolve_tests.rs  scip.rs  script_tag_deps.rs  script_tag_deps_tests.rs  secondary_scan.rs  secondary_scan_tests.rs  service.rs  service_tests.rs  stage_discover.rs  stage_link.rs  test_file_detection.rs  test_frameworks.rs  write.rs  (+1 more)
crates/bearwisdom/src/languages/: common.rs  fix-extract.mjs  fix-tests.mjs  fix-tests2.mjs  migrate.mjs  mod.rs  registry.rs  string_dsl.rs
crates/bearwisdom/src/lsp/: jsonrpc.rs  jsonrpc_tests.rs  manager.rs  manager_tests.rs  mod.rs  registry.rs  registry_tests.rs  server_handle.rs  transport.rs  transport_tests.rs  types.rs  types_tests.rs
crates/bearwisdom/src/parser/: languages.rs  languages_tests.rs  local_resolver.rs  mod.rs  scope_tree.rs  scope_tree_tests.rs
crates/lang-probe/: Cargo.toml
crates/tree-sitter-dockerfile-0-25/: Cargo.toml  build.rs  lib.rs
crates/tree-sitter-scss-local/: Cargo.toml  build.rs  expand_arrays.py  lib.rs  transform_parser.py
crates/tree-sitter-scss-local/src/: parser_expanded.c  parser_expanded_noshim.c  parser_msvc_fixed.c
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: angular_template_host.rs  blade_twig_php.rs  commands.rs  dotnet_externals.rs  go_externals.rs  html_host.rs  incremental.rs  index_pipeline.rs  java_externals.rs  js_test_chain_synthetics.rs  lsp_enrich.rs  markdown_host.rs  mdx_host.rs  notebooks.rs  per_file_manifest.rs  per_package_context.rs  per_package_locators.rs  per_package_manifests.rs  php_externals.rs  profile_scan.rs  python_externals.rs  quality_check.rs  query_layer.rs  razor_host.rs  resolution_gate.rs  ruby_templates.rs  scip_import.rs  search.rs  starlark_bazel.rs  template_engines.rs  ts_externals.rs  walker.rs  workspace_cross_package.rs  workspace_dotnet_project_ref.rs
(+1180 files in other folders)
