[workspace]
resolver = "2"
members = [
    "crates/bearwisdom",
    "crates/bearwisdom-bench",
    "crates/bearwisdom-cli",
    "crates/bearwisdom-profile",
    "crates/tree-sitter-dockerfile-0-25",
]

[workspace.dependencies]
tree-sitter            = "0.25"
tree-sitter-c-sharp    = "0.23"
tree-sitter-typescript = "0.23"
# Additional grammars — 30-language support
tree-sitter-javascript = "0.25"
tree-sitter-python     = "0.25"
tree-sitter-java       = "0.23"
tree-sitter-go         = "0.25"
tree-sitter-rust       = "0.24"
tree-sitter-ruby       = "0.23"
tree-sitter-php        = "0.24"
tree-sitter-cpp        = "0.23"
tree-sitter-c          = "0.24"
tree-sitter-kotlin     = "0.3"                # old ABI — excluded from languages.rs
tree-sitter-kotlin-ng  = "1.1"                # Kotlin grammar compatible with tree-sitter 0.25
tree-sitter-md         = "0.5"                # Markdown grammar compatible with tree-sitter 0.25
tree-sitter-swift      = "0.7"
tree-sitter-html       = "0.23"
tree-sitter-css        = "0.25"
tree-sitter-json       = "0.24"
tree-sitter-bash       = "0.25"
tree-sitter-yaml       = "0.7"
tree-sitter-lua        = "0.5"
tree-sitter-r          = "1.2"
tree-sitter-dart       = "0.1"
tree-sitter-scala      = "0.25"
tree-sitter-haskell    = "0.23"
tree-sitter-elixir     = "0.3"
tree-sitter-markdown   = "0.7"
tree-sitter-xml        = "0.7"
tree-sitter-dockerfile = "0.2"                # old ABI — kept for reference
tree-sitter-dockerfile-0-25 = { path = "crates/tree-sitter-dockerfile-0-25" }
tree-sitter-sequel    = "0.3"      # SQL grammar (replaces incompatible tree-sitter-sql 0.0.2)
tree-sitter-language  = "0.1"      # Required by tree-sitter-sequel
# tree-sitter-toml = "0.20.0"     # TODO: incompatible with tree-sitter 0.25 (uses 0.20 API)
bearwisdom-profile    = { path = "crates/bearwisdom-profile" }
rusqlite              = { version = "0.33", features = ["bundled-full", "load_extension"] }
ignore                = "0.4"
sha2                  = "0.10"
anyhow                = "1"
clap                  = { version = "4", features = ["derive"] }
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
tracing               = "0.1"
tracing-subscriber    = { version = "0.3", features = ["env-filter"] }
rayon                 = "1.10"
tokio                 = { version = "1", features = ["full"] }
# --- Search engine (Phase 1: grep) ---
grep-matcher          = "0.1"
grep-regex            = "0.1"
grep-searcher         = "0.1"
regex                 = "1"
ndarray               = "0.16"
# --- Fuzzy matching (Phase 3) ---
nucleo                = "0.5"
# --- Embeddings (Phase 4) ---
ort                   = { version = "=2.0.0-rc.12", features = ["load-dynamic"] }
tokenizers            = "0.21"
# --- SCIP import (Phase 7) ---
prost                 = "0.13"
