[package]
name    = "bearwisdom-tests"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
bearwisdom         = { path = "../crates/bearwisdom" }
bearwisdom-profile = { path = "../crates/bearwisdom-profile" }
tempfile           = "3"
anyhow             = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
prost              = { workspace = true }
rusqlite           = { workspace = true }
zip                = { workspace = true }
