[package]
name    = "bearwisdom-bench"
version = "0.1.0"
edition = "2021"
description = "BearWisdom benchmark harness"
license = "MIT OR Apache-2.0"

[[bin]]
name = "bearwisdom-bench"
path = "src/main.rs"

[dependencies]
bearwisdom        = { path = "../bearwisdom" }
anyhow            = { workspace = true }
clap              = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
tokio              = { workspace = true }
