[package]
name         = "bearwisdom-bench"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
homepage.workspace     = true
description = "BearWisdom benchmark harness"
publish = false

[[bin]]
name = "bearwisdom-bench"
path = "src/main.rs"

[dependencies]
bearwisdom        = { path = "../bearwisdom" }
sqlite-vec        = { workspace = true }
anyhow            = { workspace = true }
clap              = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
tokio              = { workspace = true }
