[package]
name         = "bearwisdom-cli"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
description = "BearWisdom CLI — structural code intelligence for agents and IDEs"

[[bin]]
name = "bw"
path = "src/main.rs"

[dependencies]
bearwisdom         = { path = "../bearwisdom" }
rayon              = { workspace = true }
sqlite-vec         = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sha2               = { workspace = true }
rusqlite           = { workspace = true }
dirs               = { workspace = true }
notify             = { workspace = true }

# Peak working-set query for quality-check perf metrics.
[target.'cfg(windows)'.dependencies]
windows-sys        = { version = "0.61", features = ["Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_Foundation"] }
