[package]
name = "bearwisdom-profile"
version = "0.1.0"
edition = "2021"
description = "Language-first project scanning — file detection, build exclusions, SDK checks, test frameworks"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
regex = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
