[package]
name         = "bearwisdom-profile"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
description = "Language-first project scanning — file detection, build exclusions, SDK checks, test frameworks"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
regex = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
