[package]
name         = "bearwisdom-web"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
homepage.workspace     = true
publish = false
description = "BearWisdom web UI — Axum HTTP server + static file serving"

[[bin]]
name = "bw-web"
path = "src/main.rs"

[dependencies]
bearwisdom         = { path = "../bearwisdom" }
sqlite-vec         = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sha2               = { workspace = true }
dirs               = { workspace = true }
rusqlite           = { workspace = true }
clap               = { workspace = true }
