[package]
name    = "bearwisdom"
version = "0.1.0"
edition = "2021"
description = "Structural code intelligence — 31 languages, cross-framework graph, hybrid search"
license = "MIT OR Apache-2.0"

[dependencies]
tree-sitter            = { workspace = true }
tree-sitter-c-sharp    = { workspace = true }
tree-sitter-typescript = { workspace = true }
# Additional grammars
tree-sitter-javascript = { workspace = true }
tree-sitter-python     = { workspace = true }
tree-sitter-java       = { workspace = true }
tree-sitter-go         = { workspace = true }
tree-sitter-rust       = { workspace = true }
tree-sitter-ruby       = { workspace = true }
tree-sitter-php        = { workspace = true }
tree-sitter-cpp        = { workspace = true }
tree-sitter-c          = { workspace = true }
tree-sitter-kotlin     = { workspace = true }
tree-sitter-swift      = { workspace = true }
tree-sitter-html       = { workspace = true }
tree-sitter-css        = { workspace = true }
tree-sitter-json       = { workspace = true }
tree-sitter-bash       = { workspace = true }
tree-sitter-yaml       = { workspace = true }
tree-sitter-lua        = { workspace = true }
tree-sitter-r          = { workspace = true }
tree-sitter-dart       = { workspace = true }
tree-sitter-scala      = { workspace = true }
tree-sitter-haskell    = { workspace = true }
tree-sitter-elixir     = { workspace = true }
tree-sitter-markdown   = { workspace = true }
tree-sitter-xml        = { workspace = true }
tree-sitter-dockerfile = { workspace = true }
tree-sitter-dockerfile-0-25 = { workspace = true }
tree-sitter-sequel     = { workspace = true }
tree-sitter-kotlin-ng  = { workspace = true }
tree-sitter-md         = { workspace = true }
tree-sitter-language   = { workspace = true }
bearwisdom-profile     = { workspace = true }
rusqlite               = { workspace = true }
ignore                 = { workspace = true }
sha2                   = { workspace = true }
anyhow                 = { workspace = true }
serde                  = { workspace = true }
serde_json             = { workspace = true }
tracing                = { workspace = true }
rayon                  = { workspace = true }
tokio                  = { workspace = true }
# Search engine
grep-matcher           = { workspace = true }
grep-regex             = { workspace = true }
grep-searcher          = { workspace = true }
regex                  = { workspace = true }
nucleo                 = { workspace = true }
# Embeddings
ort                    = { workspace = true }
tokenizers             = { workspace = true }
# SCIP import
prost                  = { workspace = true }

[dev-dependencies]
tempfile               = "3"
tracing-subscriber     = { workspace = true }
tokio                  = { version = "1", features = ["test-util", "macros"] }
