[package]
name         = "bearwisdom"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
description = "Structural code intelligence — 31 languages, cross-framework graph, hybrid search"

[dependencies]
tree-sitter            = { workspace = true }
tree-sitter-c-sharp    = { workspace = true }
tree-sitter-typescript = { workspace = true }
# Additional grammars
tree-sitter-javascript = { workspace = true }
tree-sitter-python     = { workspace = true }
tree-sitter-java       = { workspace = true }
tree-sitter-go         = { workspace = true }
tree-sitter-rust       = { workspace = true }
tree-sitter-ruby       = { workspace = true }
tree-sitter-php        = { workspace = true }
tree-sitter-cpp        = { workspace = true }
tree-sitter-c          = { workspace = true }
tree-sitter-kotlin     = { workspace = true }
tree-sitter-swift      = { workspace = true }
tree-sitter-html       = { workspace = true }
tree-sitter-css        = { workspace = true }
tree-sitter-json       = { workspace = true }
tree-sitter-bash       = { workspace = true }
tree-sitter-yaml       = { workspace = true }
tree-sitter-lua        = { workspace = true }
tree-sitter-r          = { workspace = true }
tree-sitter-dart       = { workspace = true }
tree-sitter-scala      = { workspace = true }
tree-sitter-haskell    = { workspace = true }
tree-sitter-elixir     = { workspace = true }
tree-sitter-markdown   = { workspace = true }
tree-sitter-xml        = { workspace = true }
tree-sitter-dockerfile = { workspace = true }
tree-sitter-dockerfile-0-25 = { workspace = true }
tree-sitter-sequel     = { workspace = true }
tree-sitter-kotlin-ng  = { workspace = true }
tree-sitter-md         = { workspace = true }
tree-sitter-language   = { workspace = true }
tree-sitter-graphql    = { workspace = true }
tree-sitter-hcl        = { workspace = true }
tree-sitter-proto      = { workspace = true }
tree-sitter-nix        = { workspace = true }
tree-sitter-zig        = { workspace = true }
tree-sitter-cmake      = { workspace = true }
tree-sitter-make       = { workspace = true }
tree-sitter-gleam      = { workspace = true }
tree-sitter-prisma     = { workspace = true }
tree-sitter-bicep      = { workspace = true }
tree-sitter-odin       = { workspace = true }
tree-sitter-hare       = { workspace = true }
tree-sitter-starlark   = { workspace = true }
# Wave 7 grammars (SO 2025 top languages)
tree-sitter-powershell = { workspace = true }
tree-sitter-groovy     = { workspace = true }
# tree-sitter-perl     — excluded: hard-dep on tree-sitter 0.26 (ABI conflict with 0.25)
tree-sitter-erlang     = { workspace = true }
tree-sitter-fsharp     = { workspace = true }
tree-sitter-gdscript   = { workspace = true }
# Wave 2 grammars
tree-sitter-vb-dotnet = { workspace = true }
tree-sitter-matlab    = { workspace = true }
tree-sitter-clojure   = { workspace = true }
tree-sitter-ocaml     = { workspace = true }
tree-sitter-ada       = { workspace = true }
tree-sitter-fortran   = { workspace = true }
# Wave 3 grammars
tree-sitter-pascal    = { workspace = true }
tree-sitter-cobol     = { workspace = true }
tree-sitter-puppet    = { workspace = true }
tree-sitter-scss-local = { workspace = true }
bearwisdom-profile     = { workspace = true }
rusqlite               = { workspace = true }
sqlite-vec             = { workspace = true }
ignore                 = { workspace = true }
sha2                   = { workspace = true }
anyhow                 = { workspace = true }
serde                  = { workspace = true }
serde_json             = { workspace = true }
serde_yaml             = { workspace = true }
tracing                = { workspace = true }
rayon                  = { workspace = true }
rustc-hash             = { workspace = true }
# Search engine
grep-matcher           = { workspace = true }
grep-regex             = { workspace = true }
grep-searcher          = { workspace = true }
regex                  = { workspace = true }
nucleo                 = { workspace = true }
# Embeddings
ort                    = { workspace = true }
tokenizers             = { workspace = true }
# Model directory resolution
dirs                   = { workspace = true }
# SCIP import
prost                  = { workspace = true }
# LRU cache for query results and ref caching
lru                    = { workspace = true }
strum                  = { workspace = true }
# Java externals: read .java entries from Maven sources jars
zip                    = { workspace = true }
# .NET externals: ECMA-335 metadata reader for DLL type enumeration
dotscope               = { workspace = true }
# Erlang hex tarball extraction: outer POSIX tar + inner gzip + tar
flate2                 = { workspace = true }
tar                    = { workspace = true }

# RSS / working-set sampling for per-phase memory instrumentation.
# Windows-only: pulls GetProcessMemoryInfo via the Win32 PSAPI surface.
[target.'cfg(windows)'.dependencies]
windows-sys            = { version = "0.61", features = ["Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_JobObjects", "Win32_Foundation", "Win32_Security"] }

[build-dependencies]
regex = "1"

[dev-dependencies]
tempfile               = "3"
tracing-subscriber     = { workspace = true }
tokio                  = { version = "1", features = ["test-util", "macros"] }
walkdir                = "2"
